syntax = "proto3";
package crosschain;

import "crosschain/cross_chain_tx.proto";
import "crosschain/gas_price.proto";
import "crosschain/in_tx_hash_to_cctx.proto";
import "crosschain/in_tx_tracker.proto";
import "crosschain/last_block_height.proto";
import "crosschain/out_tx_tracker.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

// GenesisState defines the metacore module's genesis state.
message GenesisState {
  repeated OutTxTracker outTxTrackerList = 1 [(gogoproto.nullable) = false];
  repeated GasPrice gasPriceList = 2;
  repeated CrossChainTx CrossChainTxs = 3;
  repeated LastBlockHeight lastBlockHeightList = 4;
  repeated InTxHashToCctx inTxHashToCctxList = 5 [(gogoproto.nullable) = false];
  repeated InTxTracker in_tx_tracker_list = 6 [(gogoproto.nullable) = false];
  ZetaAccounting zeta_accounting = 7 [(gogoproto.nullable) = false];
  repeated string FinalizedInbounds = 8;
}
